objects/Service_Contract_Escalator__c.object
<CustomObject>
    <description>stores escalator values for each year of service contract</description>
    <fields>
        <fullName>AprilBillingRate__c</fullName>
        <description>multiplies current value per day by 30</description>
        <formula>Contract_Value_Per_Day__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies current value per day by 30</inlineHelpText>
        <label>April Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AugustBillingRate__c</fullName>
        <description>multiplies current value per day by 31</description>
        <formula>Contract_Value_Per_Day__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies current value per day by 31</inlineHelpText>
        <label>August Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_End__c</fullName>
        <description>CY end date based on YEAR for this record.</description>
        <formula>CY_Start__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CY end date based on YEAR for this record.</inlineHelpText>
        <label>CY End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CY_Start__c</fullName>
        <description>shows contract start date for this year of the contract reference in YEAR field.</description>
        <formula>DATE(
YEAR( Service_Contract_Start_Date__c )+( Year__c -1) ,
MONTH(Service_Contract_Start_Date__c),
DAY(Service_Contract_Start_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>shows contract start date for this year of the contract reference in YEAR field.</inlineHelpText>
        <label>CY Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Value_Per_Day__c</fullName>
        <description>formula based on current year contract value/ 365</description>
        <formula>CurrentYearContractValue__c / ( Service_Contract__r.Current_Year_Contract_End__c - Service_Contract__r.Current_Year_Contract_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula based on current year contract value/ 365</inlineHelpText>
        <label>Contract Value Per Day</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentYearContractValue__c</fullName>
        <description>shows value of contract in current year with escalators applied - updated via trigger or WF</description>
        <inlineHelpText>shows value of contract in current year with escalators applied</inlineHelpText>
        <label>Current Year Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year12__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</inlineHelpText>
        <label>Current Solar Engineer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year1__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</inlineHelpText>
        <label>Current  Regional Manager Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Contract_Value1__c</fullName>
        <formula>IF(YEAR( Year1__c ) == YEAR(Service_Contract_Start_Date__c),  Service_Contract_Amount__c,  Prior_Year_Contract_Value1__c  * (1 +  Escalator__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Contract Value1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Solar_Electrician_1_OT_Ra__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</inlineHelpText>
        <label>Current  Solar Electrician 1 - OT Ra</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Solar_Electrician_1_Rate__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the Escalator for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the Escalator for billing purposes for current year.</inlineHelpText>
        <label>Current  Solar Electrician 1 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Solar_Electrician_2_OT_Ra__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</inlineHelpText>
        <label>Current  Solar Electrician 2 - OT Ra</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Solar_Engineer_OT_Rate__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</inlineHelpText>
        <label>Current  Solar Engineer - OT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for current year.</inlineHelpText>
        <label>Current Solar Electrician 2 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DecemberBillingRate__c</fullName>
        <description>multiplies contract value per day by 31</description>
        <formula>Contract_Value_Per_Day__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies contract value per day by 31</inlineHelpText>
        <label>December Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalatorDetails__c</fullName>
        <description>brings in details about when escalator should be applied</description>
        <formula>TEXT(Service_Contract__r.Escalator_Details__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>brings in details about when escalator should be applied</inlineHelpText>
        <label>Escalator Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalator__c</fullName>
        <description>displays escalator % from the field Escalator from related contract</description>
        <formula>Service_Contract__r.Escalator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays escalator % from the field Escalator from related contract</inlineHelpText>
        <label>Escalator</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FebruaryBillingRate__c</fullName>
        <formula>Contract_Value_Per_Day__c * 28</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates current value per day by 28</inlineHelpText>
        <label>February Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JanuaryBillingRate__c</fullName>
        <formula>Contract_Value_Per_Day__c *31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies Contract Value Per Day by 31 days</inlineHelpText>
        <label>January Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JulyBillingRate__c</fullName>
        <description>multiplies contract value per day by 31</description>
        <formula>Contract_Value_Per_Day__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies contract value per day by 31</inlineHelpText>
        <label>July Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JuneBillingRate__c</fullName>
        <description>multiplies current value per day by 30</description>
        <formula>Contract_Value_Per_Day__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies current value per day by 30</inlineHelpText>
        <label>June Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Escalator__c</fullName>
        <description>Used to bring over Labor rate escalator from contract.</description>
        <inlineHelpText>Used to bring over Labor rate escalator from contract.</inlineHelpText>
        <label>Labor Escalator</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MarchBillingRate__c</fullName>
        <description>multiplies Current value per day by 31</description>
        <formula>Contract_Value_Per_Day__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies Current value per day by 31</inlineHelpText>
        <label>March Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MayBillingRate__c</fullName>
        <description>multiplies contract value per day by 31</description>
        <formula>Contract_Value_Per_Day__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies contract value per day by 31</inlineHelpText>
        <label>May Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NovemberBillingRate__c</fullName>
        <description>multiplies current value per day by 30</description>
        <formula>Contract_Value_Per_Day__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies current value per day by 30</inlineHelpText>
        <label>November Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OctoberBillingRate__c</fullName>
        <description>multiplies current value per day by 30</description>
        <formula>Contract_Value_Per_Day__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies current value per day by 30</inlineHelpText>
        <label>October Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Options__c</fullName>
        <description>displays text value of the field Payment Options picklist from related Contract</description>
        <formula>TEXT( Service_Contract__r.Payment_Options__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays text value of the field Payment Options picklist from related Contract</inlineHelpText>
        <label>Payment Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearContractValue__c</fullName>
        <description>displays prior year value of contract with escalators updated via trigger or WF</description>
        <inlineHelpText>displays prior year value of contract with escalators</inlineHelpText>
        <label>Prior Year Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year12__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</inlineHelpText>
        <label>Prior  Solar Engineer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year1__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</inlineHelpText>
        <label>Prior  Regional Manager Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Contract_Value1__c</fullName>
        <label>Prior Year Contract Value1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Solar_Electrician_1_OT_Rate__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</inlineHelpText>
        <label>Prior  Solar Electrician 1 - OT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Solar_Electrician_2_Rate__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</inlineHelpText>
        <label>Prior  Solar Electrician 2 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Solar_Engineer_OT_Rate__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for prior year.</inlineHelpText>
        <label>Prior Solar Engineer - OT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the SV for billing purposes for Prior Year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the SV for billing purposes for Prior Year.</inlineHelpText>
        <label>Prior  Solar Electrician 2 - OT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SeptemberBillingRate__c</fullName>
        <description>multiplies current value per day by 30</description>
        <formula>Contract_Value_Per_Day__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>multiplies current value per day by 30</inlineHelpText>
        <label>September Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Amount__c</fullName>
        <description>pulls value from Contract Amount yearly field from related contract</description>
        <formula>Service_Contract__r.Contract_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls value from Contract Amount yearly field from related contract</inlineHelpText>
        <label>Service Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Contract_End_Date__c</fullName>
        <description>displays value from field Contract End Date from related contract</description>
        <formula>Service_Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays value from field Contract End Date from related contract</inlineHelpText>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Start_Date__c</fullName>
        <description>displays Service Contract Start Date from related Contract</description>
        <formula>Service_Contract__r.Service_Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays Service Contract Start Date from related Contract</inlineHelpText>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <description>displays the related contract</description>
        <inlineHelpText>displays the related contract</inlineHelpText>
        <label>Service Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Service Contract Escalators</relationshipLabel>
        <relationshipName>Service_Contract_Escalators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Solar_Electrician_1_Rate1__c</fullName>
        <description>Hourly rate stated in contract, will be carried over to the Escalator for billing purposes for prior year.</description>
        <inlineHelpText>Hourly rate stated in contract, will be carried over to the Escalator for billing purposes for prior year.</inlineHelpText>
        <label>Prior Solar Electrician 1 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year1__c</fullName>
        <label>Year1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>enter in 4 digit year</description>
        <inlineHelpText>enter in 4 digit year</inlineHelpText>
        <label>Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Contract Escalator</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Service Contract Escalator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Escalators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>